add endpoint create category
