# internal/deliveries/category_handler.go
@@ -2,6 +2,7 @@ package deliveries
 
 import (
 	"github.com/erjiridholubis/go-superindo-product/common"
+	"github.com/erjiridholubis/go-superindo-product/internal/model"
 	categorySrv "github.com/erjiridholubis/go-superindo-product/internal/service"
 	"github.com/gofiber/fiber/v2"
 )
@@ -9,6 +10,7 @@ import (
 func NewCategoryHandler(app fiber.Router, categorySrv categorySrv.CategoryService) {
 	app.Get("/", getAllCategory(categorySrv))
 	app.Get("/:id", getCategoryByID(categorySrv))
+	app.Post("/", createCategory(categorySrv))
 }
 
 // getAllCategory godoc
@@ -54,6 +56,38 @@ func getCategoryByID(categorySrv categorySrv.CategoryService) fiber.Handler {
 			if err.Error() == common.ErrNotFound {
 				return common.ErrorResponseRest(c, fiber.StatusNotFound, err.Error())
 			}
+			return common.ErrorResponseRest(c, fiber.StatusInternalServerError, err.Error())
+		}
+
+		return common.SuccessResponse(c, fiber.StatusOK, category)
+	}
+}
+
+// CreateCategory godoc
+// @Summary Create Category
+// @Description Create Category
+// @Tags Category
+// @Accept json
+// @Produce json
+// @Param category body model.CategoryRequest true "Category Body"
+// @Success 200 {object} model.CategoryResponse
+// @Failure 422 {object} common.ErrorValidationResponseModel
+// @Failure 500 {object} common.ApiErrorResponseModel
+// @Router /categories [post]
+func createCategory(categorySrv categorySrv.CategoryService) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		var categoryRequest model.CategoryRequest
+		err := c.BodyParser(&categoryRequest)
+		if err != nil {
+			return common.ErrorResponseRest(c, fiber.StatusBadRequest, err.Error())
+		}
+
+		if err := common.ValidateStruct(categoryRequest); err != nil {
+			return common.ErrorValidationResponse(c, fiber.StatusUnprocessableEntity, common.ValidationFailedMessage, err)
+		}
+
+		category, err := categorySrv.CreateCategory(c.Context(), &categoryRequest)
+		if err != nil {
 			return common.ErrorResponseRest(c, fiber.StatusInternalServerError, err.Error())
 		}
 
